[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ammbt"
version = "0.1.0"
description = "High-performance vectorized backtesting engine for AMM LP positions"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Sree Duggirala" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "numba>=0.58.0",
  "plotly>=5.18.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
data = [
  "requests>=2.28.0",
  "aiohttp>=3.8.0",
  "websockets>=11.0.0",
]
dev = [
  "jupyter>=1.0.0",
  "notebook>=7.0.0",
  "pytest>=7.4.0",
  "black>=23.0.0",
]
all = [
  "ammbt[data,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
